# ala-vm

./: CMakeLists.txt  LICENSE  README.md
docs/: OVERVIEW.md
include/alaio/vm/: allocator.hpp  argument_proxy.hpp  backend.hpp  base_visitor.hpp  bitcode_writer.hpp  config.hpp  constants.hpp  debug_info.hpp  debug_visitor.hpp  disassembly_visitor.hpp  error_codes.hpp  error_codes_def.hpp  error_codes_pp.hpp  exceptions.hpp  execution_context.hpp  execution_interface.hpp  function_traits.hpp  guarded_ptr.hpp  host_function.hpp  interpret_visitor.hpp  leb128.hpp  memory_dump.hpp  null_writer.hpp  opcodes.hpp  opcodes_def.hpp  options.hpp  parser.hpp  profile.hpp  sections.hpp  signals.hpp  softfloat.hpp  span.hpp  stack_elem.hpp  types.hpp  utils.hpp  validation.hpp  variant.hpp  vector.hpp  wasm_stack.hpp  watchdog.hpp  (+1 more)
modules/: AlaVMBuildUtils.cmake
tests/: CMakeLists.txt  alaio_max_nested_structures_tests.cpp  allocator_tests.cpp  allow_code_after_function_end_tests.cpp  allow_invalid_empty_local_set_tests.cpp  allow_u32_limits_flags_tests.cpp  allow_zero_blocktype_tests.cpp  backend_tests.cpp  forbid_export_mutable_globals_tests.cpp  guarded_ptr_tests.cpp  host_functions_tests.cpp  implementation_limits_tests.cpp  instantiation_tests.cpp  main.cpp  max_br_table_elements_tests.cpp  max_code_bytes_tests.cpp  max_func_local_bytes_tests.cpp  max_linear_memory_init_tests.cpp  max_local_sets_tests.cpp  max_memory_offset_tests.cpp  max_mutable_globals_tests.cpp  max_nested_structures_tests.cpp  max_pages_tests.cpp  max_section_elements_tests.cpp  max_table_elements_tests.cpp  null_tests.cpp  parse_tests.cpp  preconditions_tests.cpp  reentry_tests.cpp  signals_tests.cpp  span_tests.cpp  stack_restriction_tests.cpp  utils.hpp  variant_tests.cpp  varint_tests.cpp  vector_tests.cpp  wasm_config.hpp.in  watchdog_tests.cpp
tests/fuzz/: CMakeLists.txt  fuzz_driver.cpp  fuzz_parser.cpp  test
tests/memory_tests/: CMakeLists.txt  growable_allocator_test.cpp
tests/spec/: address_tests.cpp  align_tests.cpp  binary-leb128_tests.cpp  binary_tests.cpp  block_tests.cpp  br_if_tests.cpp  br_table_tests.cpp  br_tests.cpp  break-drop_tests.cpp  call_indirect_tests.cpp  call_tests.cpp  const_tests.cpp  conversions_tests.cpp  custom_tests.cpp  data_tests.cpp  e_block_tests.cpp  e_function_tests.cpp  e_globals_tests.cpp  e_locals_tests.cpp  e_memory_tests.cpp  e_module_tests.cpp  e_table_tests.cpp  elem_tests.cpp  endianness_tests.cpp  f32_bitwise_tests.cpp  f32_cmp_tests.cpp  f32_tests.cpp  f64_bitwise_tests.cpp  f64_cmp_tests.cpp  f64_tests.cpp  fac_tests.cpp  float_exprs_tests.cpp  float_literals_tests.cpp  float_memory_tests.cpp  float_misc_tests.cpp  forward_tests.cpp  func_ptrs_tests.cpp  func_tests.cpp  globals_tests.cpp  i32_tests.cpp  (+33 more)
tests/spec_test_generator/: spec_test_generator.cpp
tools/: CMakeLists.txt  addr2line.cpp  bench_interp.cpp  hello.wasm.hpp  hello_driver.cpp  interp.cpp
